# pythonistas_website

./: .gitignore  README.md  main.py  pyproject.toml
docs/: CNAME  REQUIREMENTS.md  deck.md  index.md
static/: styles.css
